deployment/my-map-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-map-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-map-app
  template:
    metadata:
      labels:
        app: my-map-app
    spec:
      containers:
      - name: my-map-app
        image: gentosmani/m-my-map-app:2.1.9
        ports:
        - containerPort: 3001
