deployment/naming-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naming-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naming-server
  template:
    metadata:
      labels:
        app: naming-server
    spec:
      containers:
      - name: naming-server
        image: gentosmani/m-naming-server:0.0.1-SNAPSHOT
        resources:
          limits:
            memory: "700Mi"
        ports:
        - containerPort: 8761
