deployment/auth-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
