deployment/my-map-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-map-app
spec:
  selector:
    app: my-map-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
