deployment/passenger-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passenger-page
spec:
  selector:
    app: passenger-page
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: LoadBalancer
