deployment/profile-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-page
spec:
  selector:
    app: profile-page
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: LoadBalancer
