deployment/route-review-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-review-app
spec:
  selector:
    app: route-review-app
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: LoadBalancer
