deployment/user-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
spec:
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 8900
      targetPort: 8900
