deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - '*.yourdomain.duckdns.org'  # Replace with your domain
    secretName: wildcard-tls
  rules:
  - host: http://vehicle-sharing-service.duckdns.org  # Example subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 3000
